# ROS-Intelligent-Service-Robot

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md
robot/: __init__.py
robot/src/arm/: CMakeLists.txt  README.md  package.xml
robot/src/arm/launch/: arm_move.launch
robot/src/arm/msg/: armMsg.msg
robot/src/arm/src/: arm_move.cpp
robot/src/basic/: CMakeLists.txt  README.md  package.xml
robot/src/basic/cfg/: robot_move.cfg
robot/src/basic/launch/: basic_move.launch
robot/src/basic/src/: basic_avoidance.cpp  basic_move.cpp
robot/src/basic/srv/: checksrv.srv
robot/src/drivers/lidar/: CMakeLists.txt  package.xml
robot/src/drivers/lidar/launch/: gmapping.launch
robot/src/drivers/lidar/src/: lidar_data_node.cpp
robot/src/drivers/tf2_web_republisher-develop/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
robot/src/drivers/tf2_web_republisher-develop/include/: tf_pair.h
robot/src/drivers/tf2_web_republisher-develop/services/: RepublishTFs.srv
robot/src/drivers/tf2_web_republisher-develop/src/: tf_web_republisher.cpp
robot/src/drivers/tf2_web_republisher-develop/src/test/: dummy_transform_publisher.py  test_tf_web_republisher.py
robot/src/drivers/tf2_web_republisher-develop/test/: test_tf2_web_republisher.test
robot/src/drivers/waterplus_map_tools/: CMakeLists.txt  README.md  package.xml  waterplus_map_tools_plugin.xml
robot/src/drivers/waterplus_map_tools/include/: UDPClient.h  UDPServer.h  add_charger_tool.h  add_waypoint_tool.h
robot/src/drivers/waterplus_map_tools/launch/: add_waypoint.launch  add_waypoint_ai.launch  add_waypoint_app.launch  add_waypoint_monitor.launch  add_waypoint_warehousing.launch  add_waypoint_wpr1.launch  wpb_ai_nav_test.launch  wpb_home_nav_remote.launch  wpb_home_nav_test.launch  wpr1_nav_remote.launch  wpr1_nav_test.launch  wpv3_nav_test.launch
robot/src/drivers/waterplus_map_tools/meshes/: charger.dae  waypoint.dae
robot/src/drivers/waterplus_map_tools/msg/: Waypoint.msg
robot/src/drivers/waterplus_map_tools/rviz/: addwaypoint.rviz  editwaypoints.rviz
robot/src/drivers/waterplus_map_tools/src/: add_charger_tool.cpp  add_waypoint_tool.cpp  charger_get_position.cpp  pose_navi_server.cpp  wp_edit_node.cpp  wp_manager.cpp  wp_nav_odom_report.cpp  wp_nav_remote.cpp  wp_nav_test.cpp  wp_navi_server.cpp  wp_saver.cpp
robot/src/drivers/waterplus_map_tools/src/network/: UDPClient.c  UDPServer.c
robot/src/drivers/waterplus_map_tools/srv/: AddNewWaypoint.srv  GetNumOfWaypoints.srv  GetWaypointByIndex.srv  GetWaypointByName.srv
robot/src/drivers/wpb_home_apps/: CMakeLists.txt  README.md  package.xml
robot/src/drivers/wpb_home_apps/asr/: 1_follow.bnf
robot/src/drivers/wpb_home_apps/include/: 10_home_script.h  6_free_script.h  7_recreational_script.h  8_innovation_script.h  9_campus_script.h  action_manager.h  f_fwh_script.h  struct.h
robot/src/drivers/wpb_home_apps/launch/: 11_obj_reco.launch  12_person_reco.launch  1_follow.launch  (+14 more)
robot/src/drivers/wpb_sim/: CMakeLists.txt  README.md  package.xml
robot/src/drivers/xfyun_waterplus/: .gitignore  CMakeLists.txt  README.md  package.xml
robot/src/fight_with_hair_ui/: CMakeLists.txt  Readme.md  mainpage.dox  package.xml
robot/src/fight_with_hair_ui/launch/: fight_with_hair_ui.launch  navigation_gen.launch  navigation_sim.launch
robot/src/fight_with_hair_ui/resources/: images.qrc
robot/src/fight_with_hair_ui/src/: build_map.cpp  build_map_auto.cpp  cctrldashboard.cpp  detection.cpp  follow.cpp  loadWayPoint.cpp  loginwindow.cpp  main.cpp  main_window.cpp  mainframe.cpp  myviz.cpp  navigation.cpp  qnode.cpp  spinslider.cpp  usercontrol.cpp
robot/src/fight_with_hair_ui/ui/: build_map.ui  build_map_auto.ui  detection.ui  follow.ui  loginwindow.ui  main_window.ui  mainframe.ui  navigation.ui  spinslider.ui  usercontrol.ui
robot/src/fwh_follow/: CMakeLists.txt  README.md  package.xml
robot/src/fwh_follow/launch/: fwh_follow_l.launch  fwh_follow_t.launch
robot/src/fwh_follow/src/: fwh_follow_yz.cpp
robot/src/fwh_obj/: CMakeLists.txt  README.md  package.xml
robot/src/fwh_obj/launch/: fwh_obj_l.launch  fwh_obj_t.launch
robot/src/fwh_obj/src/: fwh_obj_detect.cpp  fwh_obj_grab.cpp
robot/src/fwh_sound/: CMakeLists.txt  README.md  package.xml
robot/src/fwh_sound/launch/: fwh_sound_l.launch  fwh_sound_t.launch
robot/src/fwh_sound/src/: fwh_sound_yz.cpp
robot/src/navi/: CMakeLists.txt  README.md  map.xml  package.xml
robot/src/navi/launch/: add_waypoint.launch  navi_gen.launch  navi_sim.launch  omni_navi_gen.launch  omni_navi_sim.launch
robot/src/navi/maps/: display.yaml  lab.pgm  sss.yaml
robot/src/navi/nav_lidar/: amcl_omni.launch  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot/src/navi/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base.launch  move_base_params.yaml  omni_amcl.launch
robot/src/navi/rviz/: nav.rviz  rrt.rviz
robot/src/navi/src/: navi_adapter.cpp  navi_adaptor.cpp  way_saver.cpp
robot/src/navi/test/: README.md  test_navi_adaptor.cpp  test_navi_lidar_filter.cpp
robot/src/navi/waypoints/: map.xml  waypoints.xml
robot/src/rrt_slam/: CMakeLists.txt  package.xml  readme.md
robot/src/rrt_slam/launch/: rrt_slam.launch  rrt_slam_sim.launch  simple.launch
robot/src/rrt_slam/scripts/: assigner.py  filter.py  frontier_opencv_detector.py  functions.py  getfrontier.py
robot/src/slam/: CMakeLists.txt  README.md  package.xml
robot/src/slam/allMap/: jbniuo.yaml
robot/src/slam/launch/: gmapping.launch  gmapping_simulate.launch
robot/src/slam/src/: slam_lidar_filter.cpp
robot/src/user_listen/: CMakeLists.txt  README.md  package.xml
robot/src/user_listen/launch/: keyboard_user_listen.launch  keyboard_user_listen_for_map.launch
robot/src/user_listen/rviz/: slam.rviz
robot/src/user_listen/scripts/: keyboard_listen.py
robot/src/user_listen/src/: .goutputstream-016N40  user_listen.cpp
(+101 files in other folders)
