<?xml version="1.0"?><package>
  <name>waterplus_map_tools</name>
  <version>0.1.0</version>
  <description>The waterplus_map_tools package</description>

  <maintainer email="zhangwanjie@6-robot.com">Zhang Wanjie</maintainer>

  <url type="website">http://www.6-robot.com</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tinyxml</run_depend>
<!--  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>-->
  <export>
    <rviz plugin="${prefix}/waterplus_map_tools_plugin.xml"/>
  </export>
</package>
